--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "moment": "^2.10.6",
     "mongoose": "^4.1.9",
     "multiparty": "^4.1.0",
+    "nodemailer": "^2.3.1-rc.0",
     "passport": "^0.2.1",
     "passport-local-mongoose": "^0.3.0",
     "postmark": "^1.2.1",
